[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "vercel_storage"

[project]
name = "vercel_storage"
authors = [{name = "Noe Nieto", email = "nnieto@noenieto.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3"
    ]
dynamic = ["version", "description"]
requires-python = "~=3.9"
keywords = ["vercel", "api", "storage"]
dependencies = [
    "requests >=2.6",
    "click >= 8.1.7",
    "tabulate >= 0.9.0"
]

[project.urls]
Source = "https://github.com/misaelnieto/vercel-storage"

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "requests-mock[fixture]",
    "mypy"
]
packaging = [
    "flit"
]

[project.scripts]
vercel_blob = "vercel_storage.cli:cli"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
